b=361695, [mac] bidi mirroring proken with some fonts, r=vladimir, patch from jdaggett@mozilla.com